# nervsdk

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  nvp_config.yml  readme.md
.cache/clangd/index/: nvk_common.cpp.B7C1257F997DFB70.idx  nvk_common.h.13626CB1CDCBF877.idx  nvk_precomp.h.0B693F16E4F34951.idx
cmake/: utils.cmake
docs/: promise_reference.md
sources/: CMakeLists.txt  nvk.h  nvk_base.h  nvk_common.cpp  nvk_common.h  nvk_config.h  nvk_enums.h  nvk_gltf.h  nvk_macros.h  nvk_math.h  nvk_memory.h  nvk_pcg.h  nvk_precomp.h  nvk_type_ids.h  nvk_types.h  nvk_utils.h
sources/base/: RefObject.cpp  RefPtr.h  std_containers.h  string_id.h
sources/log/: FileLogger.cpp  FileLogger.h  LogManager.cpp  LogManager.h  LogSink.h  StdLogger.cpp  StdLogger.h
sources/nvk/: utils.cpp  utils.h
sources/nvk/base/: Any.h  RandGen.h  RefObject.cpp  RefObject.h  RefPtr.h  Signal.h  SlotMap.cpp  SlotMap.h  SlotProvider.h  SpinLock.h  TaskQueue.cpp  TaskQueue.h  WeakPtr.h  WeakRefObject.cpp  WeakRefObject.h  std_containers.h  string_id.h  uuid.cpp  uuid.h
sources/nvk/dx/: DX11Engine.cpp  DX11Engine.h  DX12Engine.cpp  DX12Engine.h  dx_common.cpp  dx_common.h
sources/nvk/geometry/: Polygon2.cpp  Polygon2.h  Polyline2.cpp  Polyline2.h  Profile.cpp  Profile.h  Region2.h  Segment2.h  geom_utils.h  geometry2d.cpp  geometry2d.h
sources/nvk/gltf/: Accessor.cpp  Accessor.h  Animation.cpp  Animation.h  Asset.cpp  Asset.h  Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  Camera.cpp  Camera.h  Element.cpp  Element.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Primitive.cpp  Primitive.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Skin.cpp  Skin.h  Texture.cpp  Texture.h
sources/nvk/hla/: HlaFederateConfig.h  HlaSubscriber.cpp  HlaSubscriber.h  HlaSubscriberAmbassador.cpp  HlaSubscriberAmbassador.h
sources/nvk/io/: MsgpackReader.h  MsgpackWriter.h  SvgCanvas.cpp  SvgCanvas.h
sources/nvk/log/: FileLogger.cpp  FileLogger.h  LogManager.cpp  LogManager.h  LogSink.h  StdLogger.cpp  StdLogger.h
sources/nvk/math/: Box2.h  Box3.h  Box4.h  Mat2.h  Mat3.h  Mat4.h  Quat.h  Range.h  Spline2.h  Spline3.h  Vec2.h  Vec3.h  Vec4.h  sdf.h
sources/nvk/network/: IPCHandler.cpp  IPCHandler.h
sources/nvk/pcg/: BuildingConstructor.cpp  BuildingConstructor.h  CellTextureAtlas.cpp  CellTextureAtlas.h  PCGContext.cpp  PCGContext.h  PCGGraph.cpp  PCGGraph.h  PCGNode.cpp  PCGNode.h  Point.cpp  Point.h  PointArray.cpp  PointArray.h  PointAttribute.cpp  PointAttribute.h  PointDataset.cpp  PointDataset.h  overture_maps.cpp  overture_maps.h
sources/nvk/pcg/processors/: pcg_build_intersection_contours.cpp  pcg_compute_path_contours.cpp  pcg_compute_path_offsets.cpp  pcg_find_path_intersections.cpp  pcg_resample_paths.cpp  pcg_set_data_id.cpp
sources/nvk/resource/: ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourcePacker.cpp  ResourcePacker.h  ResourceProvider.h
sources/nvk/sim/: RprDecoder.cpp  RprDecoder.h  RprEntityType.cpp  RprEntityType.h  SimEntity.h
sources/nvk/task/: Cancellation.h  JobDispatcher.cpp  JobDispatcher.h  Promise.cpp  Promise.h  ThreadPoolDispatcher.h
